@@ -321,6 +321,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       not using a do block/do-while loop any longer. While the information
       provided there might be an interesting tidbit, it's not relevant to the
       code any longer and might actually confuse readers.
+    - X2Go/Server/Agent/NX/Options.pm: undef can't be referenced, so
+      adjust/fix the comments.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
